--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 
 
 url: "https://21Hell.github.io"
-baseurl: ""   # <- pon esto si NO es tu página raíz
+baseurl: "palabrasalviento"   # <- pon esto si NO es tu página raíz
 
 twitter_username: jekyllrb
 github_username:  jekyll
