--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,8 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+include:
+  - assets/imagenes
 collections:
   poemas:
     output: true
